--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,9 @@ mypy = "^1.5.1"
 ruff = "^0.0.285"
 isort = "^5.12.0"
 black = "^23.7.0"
+matplotlib = "^3.7.2"
+pandas = "^2.0.3"
+seaborn = "^0.12.2"
 
 
 [build-system]
