--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Analysis and visualization of Strava activities"
 authors = ["Gustav Rasmussen <gcr84@hotmail.com>"]
 license = "MIT"
 readme = "README.md"
-packages = [{include = "strava_insights"}]
+packages = []
 
 [tool.poetry.dependencies]
 python = "^3.11"
