--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "dependencies": {
     "@types/chart.js": "^2.9.37",
-    "chart.js": "^4.3.3"
+    "chart.js": "^4.3.3",
+    "fs": "^0.0.1-security",
+    "papaparse": "^5.4.1"
+  },
+  "devDependencies": {
+    "@types/node": "^20.5.1"
   }
 }
