--- a/.github/workflows/wf.yml
+++ b/.github/workflows/wf.yml
@@ -44,3 +44,7 @@
     
           - name: Lint with ruff
             run: poetry run ruff --ignore=F401 .
+
+          - uses: stefanoeb/eslint-action@1.0.2
+            with:
+              files: src/
