fix: remove unused imports

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@types/chart.js": "^2.9.37",
     "chart.js": "^4.3.3",
+    "chartjs-adapter-moment": "^1.0.1",
     "fs": "^0.0.1-security",
     "papaparse": "^5.4.1"
   },
