chore: skip ESLint

--- a/.github/workflows/wf.yml
+++ b/.github/workflows/wf.yml
@@ -45,6 +45,6 @@
           - name: Lint with ruff
             run: poetry run ruff --ignore=F401 .
 
-          - uses: stefanoeb/eslint-action@1.0.2
-            with:
-              files: src/
+          # - uses: stefanoeb/eslint-action@1.0.2
+          #   with:
+          #     files: src/
