--- a/.github/workflows/wf.yml
+++ b/.github/workflows/wf.yml
@@ -41,13 +41,15 @@
     
           - name: run mypy
             run: poetry run mypy .
-    
+
           - name: Lint with ruff
             run: poetry run ruff --ignore=F401 .
 
           - name: npm ci
             run: npm ci
 
+          # setup eslint config file locally first:
+          # npm init @eslint/config
           - name: Run ESLint
             run: npx eslint --ext .ts src/
 
