test: add pytest to wf

--- a/.github/workflows/wf.yml
+++ b/.github/workflows/wf.yml
@@ -52,3 +52,6 @@
 
           - name: Lint with ruff
             run: poetry run ruff --ignore=F401 .
+
+          - name: pytest
+            run: poetry run pytest
