--- a/.github/workflows/wf.yml
+++ b/.github/workflows/wf.yml
@@ -1,57 +1,62 @@
 ---
-    name: strava-insights Workflow
-    
-    on:
-      push:
-        branches: main
-      workflow_dispatch:
-    
-    jobs:
-      qualify_code:
-        runs-on: ubuntu-latest
-    
-        steps:
-          - name: Check out code
-            uses: actions/checkout@v3
+name: strava-insights Workflow
 
-          - name: npm ci
-            run: npm ci
+on:
+  push:
+    branches: main
+  workflow_dispatch:
 
-          # setup eslint config file locally first:
-          # npm init @eslint/config
-          - name: Run ESLint
-            run: npx eslint --ext .ts src/
+jobs:
+  qualify_code:
+    runs-on: ubuntu-latest
 
-          - name: Setup Python
-            uses: actions/setup-python@v4
-            with:
-              python-version: 3.11
-              cache: pip
-    
-          - name: Install and cache poetry
-            run: |
-              curl -sSL https://install.python-poetry.org | python3 -
-            if: steps.cache.outputs.cache-hit != 'true'
-    
-          - name: Cache poetry dependencies
-            id: cache
-            uses: actions/cache@v3
-            with:
-              path: ~/.cache/pypoetry/virtualenvs
-              key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
-              restore-keys: ${{ runner.os }}-poetry-
-    
-          - name: Install dependencies with poetry
-            run: poetry install
-            env:
-              POETRY_VIRTUALENVS_IN_PROJECT: true
-            if: steps.cache.outputs.cache-hit != 'true'
-    
-          - name: run mypy
-            run: poetry run mypy .
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v3
 
-          - name: Lint with ruff
-            run: poetry run ruff --ignore=F401 .
+      - name: npm ci
+        run: npm ci
 
-          - name: pytest
-            run: poetry run pytest
+      # setup eslint config file locally first:
+      # npm init @eslint/config
+      - name: Run ESLint
+        run: npx eslint --ext .ts src/
+
+      - name: Setup Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.11
+          cache: pip
+
+      - name: Install and cache poetry
+        run: |
+          curl -sSL https://install.python-poetry.org | python3 -
+        if: steps.cache.outputs.cache-hit != 'true'
+
+      - name: Cache poetry dependencies
+        id: cache
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pypoetry/virtualenvs
+          key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
+          restore-keys: ${{ runner.os }}-poetry-
+
+      - name: Install dependencies with poetry
+        run: poetry install
+        env:
+          POETRY_VIRTUALENVS_IN_PROJECT: true
+        if: steps.cache.outputs.cache-hit != 'true'
+
+      - name: run mypy
+        run: poetry run mypy .
+
+      - name: Lint with ruff
+        run: poetry run ruff --ignore=F401 .
+
+      - name: pytest
+        run: poetry run pytest
+
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v3
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
