test: extend codecov action

--- a/.github/workflows/wf.yml
+++ b/.github/workflows/wf.yml
@@ -60,3 +60,6 @@ jobs:
         uses: codecov/codecov-action@v3
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+        with:
+          files: ./cov.xml
+          verbose: true
