--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ seaborn = "^0.12.2"
 icecream = "^2.1.3"
 pytest = "^7.4.3"
 pytest-cov = "^4.1.0"
+datetime-convertion-tools = "^0.0.5"
 
 
 [build-system]
