--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
 name = "strava-insights"
-version = "0.1.0"
+version = "0.0.1"
 description = "Analysis and visualization of Strava activities"
-authors = ["Gustav Rasmussen <gcr84@hotmail.com>"]
+authors = ["Gustav Rasmussen"]
 license = "MIT"
 readme = "README.md"
 packages = []
@@ -20,7 +20,6 @@ icecream = "^2.1.3"
 pytest = "^7.4.3"
 pytest-cov = "^4.1.0"
 datetime-convertion-tools = "^0.0.5"
-
 
 [build-system]
 requires = ["poetry-core"]
